--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
+        "league/csv": "^9.18",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
