--- a/.scribe/endpoints.cache/02.yaml
+++ b/.scribe/endpoints.cache/02.yaml
@@ -25,9 +25,10 @@ endpoints:
 
         After using this endpoint:
         - You will receive a paginated list of users, optionally filtered by gender.
-      authenticated: false
+      authenticated: true
       custom: []
     headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
       Content-Type: application/json
       Accept: application/json
     urlParameters: []
@@ -40,7 +41,7 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":[{"id":41,"full_name":"Darlene Lockman II","gender":"male","email":"nsmitham@example.org","role":null},{"id":42,"full_name":"Felix Hahn","gender":"female","email":"quigley.kaylah@example.net","role":null}],"links":{"first":"\/?page=1","last":"\/?page=1","prev":null,"next":null},"meta":{"current_page":1,"from":1,"last_page":1,"links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"\/?page=1","label":"1","active":true},{"url":null,"label":"Next &raquo;","active":false}],"path":"\/","per_page":10,"to":2,"total":2}}'
+        content: '{"data":[{"id":53,"full_name":"Emmanuelle Collier","gender":"female","email":"gardner.trantow@example.com","role":null,"created_at":"2024-10-26T08:36:05.000000Z"},{"id":54,"full_name":"Prof. Lucile Wilderman","gender":"male","email":"cody56@example.com","role":null,"created_at":"2024-10-26T08:36:06.000000Z"}],"links":{"first":"\/?page=1","last":"\/?page=1","prev":null,"next":null},"meta":{"current_page":1,"from":1,"last_page":1,"links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"\/?page=1","label":"1","active":true},{"url":null,"label":"Next &raquo;","active":false}],"path":"\/","per_page":10,"to":2,"total":2}}'
         headers: []
         description: ''
         custom: []
@@ -51,9 +52,10 @@ endpoints:
             "data": [
               {
                 "id": 1,
-                "name": "John Doe",
-                "email": "john@example.com",
+                "full_name": "John Doe",
                 "gender": "male",
+                "email": "john@example.com",
+                "role": "operator",
                 "created_at": "2024-10-18T10:00:00.000000Z",
                 "updated_at": "2024-10-18T10:00:00.000000Z"
               },
@@ -72,7 +74,10 @@ endpoints:
         description: ''
         custom: []
     responseFields: []
-    auth: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer 1P8a3VE66vdkcg5ehbDaf4Z'
     controller: null
     method: null
     route: null
@@ -97,9 +102,10 @@ endpoints:
 
         After using this endpoint:
         - You will receive the details of the selected user.
-      authenticated: false
+      authenticated: true
       custom: []
     headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
       Content-Type: application/json
       Accept: application/json
     urlParameters:
@@ -123,7 +129,7 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":{"id":43,"full_name":"Marcus Anderson","gender":"female","email":"anibal.abshire@example.net","role":null}}'
+        content: '{"data":{"id":55,"full_name":"Logan Kautzer","gender":"female","email":"bernard.mertz@example.org","role":null,"created_at":"2024-10-26T08:36:06.000000Z"}}'
         headers: []
         description: ''
         custom: []
@@ -132,9 +138,10 @@ endpoints:
         content: |-
           {
             "id": 1,
-            "name": "John Doe",
-            "email": "john@example.com",
+            "full_name": "John Doe",
             "gender": "male",
+            "email": "john@example.com",
+            "role": "operator",
             "created_at": "2024-10-18T10:00:00.000000Z",
             "updated_at": "2024-10-18T10:00:00.000000Z"
           }
@@ -148,7 +155,10 @@ endpoints:
         description: ''
         custom: []
     responseFields: []
-    auth: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer ZcPafE5vgkae668V134hdDb'
     controller: null
     method: null
     route: null
@@ -173,9 +183,10 @@ endpoints:
 
         After using this endpoint:
         - The new user will be created and returned.
-      authenticated: false
+      authenticated: true
       custom: []
     headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
       Content-Type: application/json
       Accept: application/json
     urlParameters: []
@@ -187,7 +198,7 @@ endpoints:
         name: full_name
         description: ''
         required: true
-        example: iste
+        example: reiciendis
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -197,7 +208,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: uquigley@example.org
+        example: pat53@example.net
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -207,7 +218,7 @@ endpoints:
         name: password
         description: 'Must be at least 8 characters.'
         required: true
-        example: ';51G1?`TcJB,ag'
+        example: uGM+/@Q
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -239,16 +250,16 @@ endpoints:
         nullable: false
         custom: []
     cleanBodyParameters:
-      full_name: iste
-      email: uquigley@example.org
-      password: ';51G1?`TcJB,ag'
+      full_name: reiciendis
+      email: pat53@example.net
+      password: uGM+/@Q
       gender: male
       role: admin
     fileParameters: []
     responses:
       -
         status: 200
-        content: '{"data":{"id":44,"full_name":"Prof. Torrey Sporer","gender":"male","email":"merritt52@example.com","role":null}}'
+        content: '{"data":{"id":56,"full_name":"Gabe Haag","gender":"female","email":"lonny.gottlieb@example.net","role":null,"created_at":"2024-10-26T08:36:06.000000Z"}}'
         headers: []
         description: ''
         custom: []
@@ -257,9 +268,10 @@ endpoints:
         content: |-
           {
             "id": 1,
-            "name": "John Doe",
-            "email": "john@example.com",
+            "full_name": "John Doe",
             "gender": "male",
+            "email": "john@example.com",
+            "role": "operator",
             "created_at": "2024-10-18T10:00:00.000000Z",
             "updated_at": "2024-10-18T10:00:00.000000Z"
           }
@@ -273,7 +285,10 @@ endpoints:
         description: ''
         custom: []
     responseFields: []
-    auth: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer fP4bavdZE6681Vhecagk3D5'
     controller: null
     method: null
     route: null
@@ -298,9 +313,10 @@ endpoints:
 
         After using this endpoint:
         - The user's details will be updated with the provided data.
-      authenticated: false
+      authenticated: true
       custom: []
     headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
       Content-Type: application/json
       Accept: application/json
     urlParameters:
@@ -323,7 +339,7 @@ endpoints:
         name: full_name
         description: ''
         required: false
-        example: corporis
+        example: quo
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -333,7 +349,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: false
-        example: jarrell48@example.net
+        example: parker.doris@example.com
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -352,14 +368,14 @@ endpoints:
         nullable: false
         custom: []
     cleanBodyParameters:
-      full_name: corporis
-      email: jarrell48@example.net
+      full_name: quo
+      email: parker.doris@example.com
       gender: female
     fileParameters: []
     responses:
       -
         status: 200
-        content: '{"data":{"id":45,"full_name":"Natalie Lindgren","gender":"male","email":"cbernhard@example.net","role":null}}'
+        content: '{"data":{"id":57,"full_name":"Yasmeen Lemke DDS","gender":"female","email":"wkuhlman@example.org","role":null,"created_at":"2024-10-26T08:36:06.000000Z"}}'
         headers: []
         description: ''
         custom: []
@@ -368,9 +384,10 @@ endpoints:
         content: |-
           {
             "id": 1,
-            "name": "Updated John Doe",
-            "email": "john.updated@example.com",
+            "full_name": "Updated John Doe",
             "gender": "male",
+            "email": "john.updated@example.com",
+            "role": "operator",
             "created_at": "2024-10-18T10:00:00.000000Z",
             "updated_at": "2024-10-18T10:00:00.000000Z"
           }
@@ -384,7 +401,10 @@ endpoints:
         description: ''
         custom: []
     responseFields: []
-    auth: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer 63a1ahEfgvd8DkVbZe645Pc'
     controller: null
     method: null
     route: null
@@ -409,9 +429,10 @@ endpoints:
 
         After using this endpoint:
         - The user will be deleted from the system.
-      authenticated: false
+      authenticated: true
       custom: []
     headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
       Content-Type: application/json
       Accept: application/json
     urlParameters:
@@ -446,7 +467,10 @@ endpoints:
         description: ''
         custom: []
     responseFields: []
-    auth: []
+    auth:
+      - headers
+      - Authorization
+      - 'Bearer DZk4f1a3bEv65h8cP6gdeaV'
     controller: null
     method: null
     route: null
