--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,25 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SAIL_XDEBUG_MODE=develop,debug,coverage
+WWWGROUP=1000
+WWWUSER=1000
+
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+# REVERB_CLUSTER=mt1
+
+NEXT_PUBLIC_REVERB_APP_KEY="${REVERB_APP_KEY}"
+NEXT_PUBLIC_REVERB_HOST="${REVERB_HOST}"
+NEXT_PUBLIC_REVERB_PORT="${REVERB_PORT}"
+NEXT_PUBLIC_REVERB_SCHEME="${REVERB_SCHEME}"
+# NEXT_PUBLIC_REVERB_CLUSTER="${REVERB_CLUSTER}"
+
+BROADCAST_DRIVER=reverb
+
+FLASK_MODEL_URL=
